# tic-tac-toe

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: display.rs  main.rs  parse.rs
gui/: Cargo.toml  build.rs
gui/src/: appwindow.slint  main.rs
mcts/: Cargo.toml
mcts/src/: algorithm.rs  lib.rs  mcts.rs  minimal.rs  ucb1.rs
tictactoe/: Cargo.toml
tictactoe/src/: lib.rs  logic.rs  mcts_impl.rs
