[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.7.0"
mcts = { path = "../mcts" }
tictactoe = { path = "../tictactoe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[build-dependencies]
slint-build = "1.7.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
